--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,11 @@ body {
     padding-left: 30px;
   }
   
+  .reload-button{
+    margin-top: 20px;
+    border-radius: 20%;
+  }
+  
   .board-row:after {
     clear: both;
     content: "";
